[package]
name = "highs"
version = "0.5.0"
authors = ["Ophir LOJKINE", "rust-or"]
edition = "2018"
description = "Safe rust bindings for the HiGHS linear programming solver. See http://highs.dev."
license = "MIT"
repository = "https://github.com/rust-or/highs"
keywords = ["linear-programming", "optimization", "math", "solver"]

[dependencies]
highs-sys = "0.2"
log = "0.4"