[package]
name = "highs"
version = "1.5.0"
authors = ["Ophir LOJKINE", "rust-or"]
edition = "2021"
description = "Safe rust bindings for the HiGHS linear programming solver. See http://highs.dev."
license = "MIT"
repository = "https://github.com/rust-or/highs"
keywords = ["linear-programming", "optimization", "math", "solver"]

[dependencies]
highs-sys = {version=["1.5.0"], features=["discover"]}
log = "0.4.17"
